prevented display overflow, fixed a small bug that was not letting the result to be displayed if it is zero, added functionality to input negative numbers

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ p{
     
     text-align: end;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 
